...
    android:layout_height="match_parent"
    tools:context="com.finnzhanchen.songgo.Activity_1_Start"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/button_start"
        android:layout_width="118dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:onClick="buttonStartGame"
        android:text="Start!"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_box" />

    <Button
        android:id="@+id/button_achievement"
        android:layout_width="121dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:onClick="buttonAchievement"
        android:text="Achievement"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start" />

    <ImageView
...
