...
        android:layout_marginTop="20dp"
        android:onClick="buttonRandom"
        android:text="Random"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_go" />

    <Spinner
        android:id="@+id/spinner_song"
        android:layout_width="164dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
...
    <Button
        android:id="@+id/button_go"
        android:layout_width="96dp"
        android:layout_height="47dp"
        android:layout_marginTop="60dp"
        android:onClick="buttonGO"
        android:text="GO!"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_difficulty" />

    <TextView
        android:id="@+id/textView"
...
